2002-12-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/tcljava/tcl/lang/JavaInvoke.java (getsetField):
	Check to see is a field is final before setting it.
	Add previous exception error message when creating
	an unexpected exception.
	* tests/tcljava/JavaFieldCmd.test: Test for error
	on attempt to set a final field.

2002-12-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* new_features.txt: Add note about accessibility
	checks for reflected objects.
	* DOS/TclJava/JavaCastCmd.html:
	* docs/TclJava/JavaFieldCmd.html:
	* docs/TclJava/JavaImportCmd.html:
	* docs/TclJava/JavaInfoCmd.html:
	* docs/TclJava/JavaInstanceOfCmd.html:
	* docs/TclJava/JavaNewCmd.html:
	* docs/TclJava/JavaPackage.html:
	Use the term "accessible" instead of "public" when
	talking about Java objects we can reflect. Add
	a couple of additional examples. Add note about
	loading into Java to Java package section.
	* src/tcljava/tcl/lang/FieldSig.java (get):
	Add accessibility check.
	* src/tcljava/tcl/lang/FuncSig.java (get):
	Add accessibility check.
	Add abstract class check.
	* src/tcljava/tcl/lang/JavaCastCmd.java (cmdProc):
	Add accessibility check.
	* src/tcljava/tcl/lang/JavaImportCmd.java (cmdProc):
	* src/tcljava/tcl/lang/JavaInfoCmd.java (cmdProc):
	Add accessibility checks to the events, fields,
	methods, constructors, and properties methods.
	* src/tcljava/tcl/lang/JavaInstanceofCmd.java (cmdProc):
	Add accessibility check.
	* src/tcljava/tcl/lang/JavaInvoke.java (callMethod,
	callStaticMethod, call, getsetField, getProperty,
	setProperty): Catch known exceptions that should
	not occur and raise a TclRuntimeError if they do.
	Add accessibility checks so that a method with a
	return type that cannot be reflected is not invoked.
	Add accessibility check so that a field with
	an inaccessible type will not be reflected.
	* src/tcljava/tcl/lang/JavaNewCmd.java (cmdProc,
	ArraySig, get): Rename componentType member to arrayType.
	Add accessibility check.